<resources>
    <string name="app_name">AD005Database_SQLite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="updated_success">Updated successfully</string>
    <string name="updated_fail">Updated fail</string>
    <string name="inserted_success">Inserted successfully</string>
    <string name="inserted_fail">Inserted fail</string>
</resources>
